--- a/calendar.css
+++ b/calendar.css
@@ -9,7 +9,7 @@
 	border: solid 2px #5588ff;
 	border-radius: 15px;/* not working */
 	background-color: white;
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: 'Open Sans', 'Arial', sans-serif;
 	font-size: 14px;
 	color: #444E58;
 	border-collapse: collapse;
