--- a/template.css
+++ b/template.css
@@ -5,7 +5,7 @@ Perfect for css consistency when multiple people contribute.
 
 DOWNLOADCOPYRETURN
 body {
-    font-family: Arial, Geneva, Helvetica;
+    font-family: 'Open Sans', Arial, Geneva, Helvetica;
     font-size: 20pt;
     color: #000;
     background-color: #00477F;
