--- a/template.css
+++ b/template.css
@@ -151,7 +151,7 @@ img#header {
     margin-left: auto;
     margin-right: auto;
     font-size: 15pt;
-    font-family: Helvetica;
+    font-family: 'Open Sans', Helvetica;
     text-align: left;
     color: #FFF;
     margin-bottom: 10px;
