--- a/template.css
+++ b/template.css
@@ -43,7 +43,7 @@ div.imagewrap {
 }
 h1 {
     font-size: 17pt;
-    font-family: 'Helvetica';
+    font-family: 'Open Sans', 'Helvetica';
     padding-bottom: 8px;
 }
 h2 {
