--- a/template.css
+++ b/template.css
@@ -191,7 +191,7 @@ img#header {
     /* width: 100px; */
     height: 30px;
     line-height: 17px;
-    font-family: Helvetica, Helvetica, sans-serif;
+    font-family: 'Open Sans', Helvetica, sans-serif;
     font-size: 12pt;
     font-weight: 700;
     text-align: center;
