--- a/calendar.css
+++ b/calendar.css
@@ -38,7 +38,7 @@
 	font-size: 25px;
 	font-weight: 500;
 	color: #5588FF;
-	font-family: 'Open Sans', 'Arial;
+	font-family: 'Open Sans', 'Arial';
 	margin-bottom: 10px;
 }
 
