now I meant to update it for real lol

--- a/template.css
+++ b/template.css
@@ -393,7 +393,7 @@ ul#gallery img {
 }
 .person-picture {
     float: left;
-    margin: 10px;
+    margin: 10px 15px;
     width: 200px;
     text-align: center;
 }
