--- a/template.css
+++ b/template.css
@@ -44,6 +44,7 @@ div.imagewrap {
 h1 {
     font-size: 17pt;
     font-family: 'Open Sans', 'Helvetica';
+    font-weight: 600;
     padding-bottom: 8px;
 }
 h2 {
