--- a/template.css
+++ b/template.css
@@ -328,7 +328,7 @@ span.ic {
 }
 #paper .newsItem h2 {
     border-bottom: solid 1px #000;
-    padding-left: 0;
+    padding-bottom: 10px;
     padding-top: 25px;
     line-height: 25px;
     size: 25px;
