--- a/template.css
+++ b/template.css
@@ -157,7 +157,7 @@ img#header {
     background-color: #09477F;
 }
 #paperSubHeader #welcomeBar p {
-    margin: 3px 0 -8px 13px;
+    margin: 0 0 -8px 13px;
     color: #FFF;
 }
 #paperSubHeader #welcomeBar a {
