edited page footer alignment

--- a/template.css
+++ b/template.css
@@ -353,7 +353,7 @@ span.ic {
     clear: both;
     width: auto;
     height: auto;
-    padding-bottom: 15px;
+    padding: 60 0 30 0;
 }
 #disclaimer {
     width: auto;
