edited event display

--- a/ggwiki.css
+++ b/ggwiki.css
@@ -121,7 +121,7 @@ p.success {
 
 .subtitle {
     margin-top:15px;
-    /* margin-bottom: 10px; */
+    margin-bottom: 10px;
     margin-right: 0;
     color: #666;
     font-family: Open Sans, sans-serif;
