--- a/bootstrap.css
+++ b/bootstrap.css
@@ -114,9 +114,10 @@ button,
 input,
 select,
 textarea {
-  margin: 0;
-  font-size: 100%;
+  margin: 0px;
+  font-size: 90%;
   vertical-align: middle;
+  padding: 2 12 4 2;
 }
 button,
 input {
@@ -150,20 +151,20 @@ textarea {
   vertical-align: top;
 }
 body {
-	margin: 0;
-	font-family: 'Open Sans', Arial, sans-serif;
-	font-size: 18px;
-	line-height: 20px;
-	text-transform: none;
-	color: #3298ff;
-	font-weight: 400;
-	background-color: #09477f;
+  margin: 0;
+  font-family: 'Open Sans', Arial, sans-serif;
+  font-size: 18px;
+  line-height: 20px;
+  text-transform: none;
+  color: #3298ff;
+  font-weight: 400;
+  background-color: #09477f;
 }
 a {
-	color: #3298FF;
-	text-decoration: none;
-	font-weight: 500;
-	font-size: 11px;
+  color: #3298FF;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 11px;
 }
 
 .eventList a {
@@ -4718,8 +4719,8 @@ button.close {
 }
 @media (max-width: 979px) {
   body {
-	/* padding-top: 20px; */
-	}
+  /* padding-top: 20px; */
+  }
   .navbar-fixed-top,
   .navbar-fixed-bottom {
     position: static;
@@ -4864,83 +4865,83 @@ button.close {
 }
 
 #event {
-	margin: 10px 10px 0px 10px;
-	font-family: 'Verdana';
-	font-size: 8pt;
-	color: #666;
+  margin: 10px 10px 0px 10px;
+  font-family: 'Verdana';
+  font-size: 8pt;
+  color: #666;
 }
 
 #event form {
-	margin: 0px;
+  margin: 0px;
 }
 
 #event_details caption {
-	display: none;
+  display: none;
 }
 
 #event_details th {
-	text-align: left;
-	font-weight: normal;
+  text-align: left;
+  font-weight: normal;
 }
 
 #event_details td {
-	color: #666;
+  color: #666;
 }
 
 #event_description_title {
-	
+  
 }
 
 #event_description {
-	color: #666;
+  color: #666;
 }
 
 #event_attendees {
-	width: 100%;
-	clear: both;
+  width: 100%;
+  clear: both;
 }
 
 #event_attendees caption {
-	display: none;
+  display: none;
 }
 
 #event_attendees th {
-	text-align: left;
-	color: #3298ff;
+  text-align: left;
+  color: #3298ff;
 }
 
 #event_title {
-	font-weight: bold;
-	font-size: 12pt;
-	padding: 10px 2px 10px 20px;
-	background-color: #d5e4f2;
-	color: #3298ff;
+  font-weight: bold;
+  font-size: 12pt;
+  padding: 10px 2px 10px 20px;
+  background-color: #d5e4f2;
+  color: #3298ff;
 }
 
 #event_navbar {
-	text-align: right;
-	float: right;
-	margin: 10px 10px 5px 5px;
-	padding: 5px;
-	background-color: white;
-	border: solid 1px rgba(0, 0, 0, .4);
-	color: #3298ff;
+  text-align: right;
+  float: right;
+  margin: 10px 10px 5px 5px;
+  padding: 5px;
+  background-color: white;
+  border: solid 1px rgba(0, 0, 0, .4);
+  color: #3298ff;
 }
 
 #event_navbar ul {
-	list-style: none;
-	padding: 0px;
-	margin: 0px;
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
 }
 
 #event_navbar button {
-	width: 112px;
-	margin: 2px;
+  width: 112px;
+  margin: 2px;
 }
 
 #event_body {
-	background-color: #fff;
-	padding: 10px 20px 10px 20px;
+  background-color: #fff;
+  padding: 10px 20px 10px 20px;
 }
 
 #event_special_people {
@@ -4948,7 +4949,7 @@ button.close {
 }
 
 #event_driver {
-  	text-align: center;
+    text-align: center;
 }
 
 #event_photographer {
@@ -4956,36 +4957,36 @@ button.close {
 }
 
 #event_comments {
-	margin: 1.5em 0px 1.5em 0px;
-	padding: 5px;
-	background-color: #d5e4f2;
+  margin: 1.5em 0px 1.5em 0px;
+  padding: 5px;
+  background-color: #d5e4f2;
 }
 
 #event_comments_title {
-	font-weight: bold;
-	text-align: left;
-	color: #3298ff;
-	margin-bottom: 3px;
+  font-weight: bold;
+  text-align: left;
+  color: #3298ff;
+  margin-bottom: 3px;
 }
 
 .event_comment {
-	margin: 0px 0px 3px 0px;
-	border: solid 1px rgba(0, 0, 0, 0.4);
+  margin: 0px 0px 3px 0px;
+  border: solid 1px rgba(0, 0, 0, 0.4);
 }
 
 .event_comment_body {
-	padding: 5px;
+  padding: 5px;
 }
 
 
 .event_comment_like {
-	padding-left: 5px;
+  padding-left: 5px;
 }
 
 
 /*
 .event_comment_like {
-	padding-left: 25px;
+  padding-left: 25px;
     background-repeat: no-repeat;
     background-position: 5px center;    
     background-image:url('images/facebooklikebutton.png');
@@ -4993,8 +4994,8 @@ button.close {
 */
 
 .event_comment_signature {
-	padding: 2px;
-	text-align: right;
+  padding: 2px;
+  text-align: right;
 }
 
 .event_comment_signature a {
@@ -5002,5 +5003,5 @@ button.close {
 }
 
 #event_post_comment {
-	text-align: center;
+  text-align: center;
 }
