--- a/calendar.css
+++ b/calendar.css
@@ -122,3 +122,7 @@
 	color: green;
 	text-decoration: line-through;
 }
+#calendar li.highlighted{
+    background-color: yellow;
+    border-radius: 8px 8px 8px 8px;
+}
