--- a/template.css
+++ b/template.css
@@ -106,6 +106,7 @@ img#header {
     height: 325px;
     margin-top: -50px;
     background: url(images/new_quote2.jpg) center top no-repeat;
+    background-size: 100%;
 }
 #paperHeader ul {
     height: 120px;
